[package]
name = "hdnode"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
hdwallet = { git = "https://github.com/nlordell/hdwallet", branch = "main" }
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
