[package]
name = "hdnode"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
hdwallet = { git = "https://github.com/nlordell/hdwallet", tag = "v0.1.1" }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
